tests/cases/device_definition_errors/stderr.rs.txt
error: The device driver input has errors that need to be solved!
    --> device_definition_errors.rs:2047:1
     |
2047 | compile_error!("The device driver input has errors that need to be solved!");
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `Etype2` in this scope
    --> device_definition_errors.rs:1767:32
     |
1767 |         pub fn value(&self) -> Etype2 {
     |                                ^^^^^^ not found in this scope

error[E0412]: cannot find type `Etype2` in this scope
    --> device_definition_errors.rs:1777:44
     |
1777 |         pub fn set_value(&mut self, value: Etype2) {
     |                                            ^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0412`.
error: could not compile `device_definition_errors` (bin "device_definition_errors") due to 3 previous errors
